syntax = "proto3";

package proto;

option go_package = "finstream/audit/finstream/proto";

// The Budget Service handles categorization and spending rules
service BudgetService {
    rpc EvaluateItem (ItemRequest) returns (BudgetResponse);
}

message ItemRequest {
    string name = 1;
    float price = 2;
}

message BudgetResponse {
    string category = 1;        // e.g., "Groceries", "Entertainment"
    string suggestion = 2;      // e.g., "Approved", "Over Budget!"
    float remaining_limit = 3;  // How much left in this category
}